# ReplicaBackend

./: CMakeLists.txt  projectTree
include/: matlabReplica.h  rMatrix.h  rMatrixFast.h
src/: rMatrix.c  rMatrixFast.c  rMatrixFastOld.cold
test/: CMakeLists.txt  mainTest  test.c
test/optimtest/: testOptim.c
